--- a/pkg/storage/BUILD.bazel
+++ b/pkg/storage/BUILD.bazel
@@ -2,10 +2,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "proxy.go",
-        "storage.go",
-    ],
+    srcs = ["storage.go"],
     importpath = "github.com/f110/discord-bot/pkg/storage",
     visibility = ["//visibility:public"],
     deps = [
