--- a/cmd/discord-bot/BUILD.bazel
+++ b/cmd/discord-bot/BUILD.bazel
@@ -6,7 +6,8 @@ go_library(
     importpath = "github.com/f110/discord-bot/cmd/discord-bot",
     visibility = ["//visibility:private"],
     deps = [
-        "//pkg/handler:go_default_library",
+        "//pkg/bot:go_default_library",
+        "//pkg/config:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
     ],
 )
