--- a/pkg/handler/BUILD.bazel
+++ b/pkg/handler/BUILD.bazel
@@ -2,12 +2,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["bot.go"],
+    srcs = ["handler.go"],
     importpath = "github.com/f110/discord-bot/pkg/handler",
     visibility = ["//visibility:public"],
-    deps = [
-        "//pkg/amesh:go_default_library",
-        "//pkg/storage:go_default_library",
-        "@com_github_bwmarrin_discordgo//:go_default_library",
-    ],
+    deps = ["@com_github_bwmarrin_discordgo//:go_default_library"],
 )
